# expense-tracker-api

./: .gitignore  alembic.ini  pyproject.toml
app/: database.py  dependencies.py  main.py  models.py  schemas.py  settings.py
app/api/: router.py
app/api/auth/: dependencies.py  router.py  schemas.py  services.py
app/api/records/: router.py  schemas.py  services.py
app/api/users/: router.py  schemas.py  services.py
migrations/: env.py
